fix: url in post overflows if they are too long, and layout would be influenced on mobile

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -919,6 +919,7 @@ article .article-tags .chip {
     color: #42b983;
     font-weight: 500;
     text-decoration: underline;
+    word-wrap:break-word;
 }
 
 #articleContent img {
